--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -34,69 +34,83 @@
 ;中其他文件中;相对<GUID文件路径>,当前目录用".\"代替，父目录用"..\"代替,文件为其本身用"*"代替
 
 ;----------------系统------------------
-;打开(快捷方式)
 [00021401-0000-0000-c000-000000000046]
 Text = 打开(&O)
 en-US-Text = &Open
 Icon = shell32.dll,-16769
 [37ea3a21-7493-4208-a011-7f9ea79ce9f5]
-ResText = @*,-1033
+ResText = @shell32.dll,-1033
 Text = 打开文件所在的位置(&I)
 Icon = explorer.exe
+[ff609cc7-d34d-4049-a1aa-2293517ffcc6]
+ResText = @stobject.dll,-417
+Text = 设置为桌面背景(&B)
+Icon = imageres.dll,-5346
+[0bf754aa-c967-445c-ab3d-d8fda9bae7ef]
+ResText = @stobject.dll,-416
+Text = 下一个桌面背景(&N)
+Icon = imageres.dll,-5346
+[3080f90e-d7ad-11d9-bd98-0000947b0257]
+ResText = @shell32.dll,-12715
+Text = 窗口转换程序
+Icon = imageres.dll
+[470c0ebd-5d73-4d58-9ced-e91e22e23282]
+ResText = @shell32.dll,-51201
+Text = 固定到"开始"屏幕(&P)
+Icon = imageres.dll,-5376
+[a2a9545d-a0c2-42b4-9708-a0b2badd77c8]
+ResText = @shell32.dll,-30608
+Text = 附到「开始」菜单(&U)
+Icon = imageres.dll,-80
+[90aa3a4e-1cba-4233-b8bb-535773d48449]
+ResText = @shell32.dll,-5386
+Text = 固定到任务栏(&K)
+Icon = imageres.dll,-5354
+[7ba4c740-9e81-11cf-99d3-00aa004ae837]
+ResText = @shell32.dll,-30312
+Text = 发送到(&N)
+Icon = imageres.dll,-185
+[f3d06e7c-1e45-4a26-847e-f9fcdee59be0]
+ResText = @shell32.dll,-30328
+Text = 复制为路径(&A)
+Icon = imageres.dll,-5302
+[c2fbb630-2971-11d1-a18c-00c04fd75d13]
+ResText = @shell32.dll,-30304
+Text = 复制到文件夹(&F)...
+Icon = imageres.dll,-5304
+[c2fbb631-2971-11d1-a18c-00c04fd75d13]
+ResText = @shell32.dll,-30305
+Text = 移动到文件夹(&V)...
+Icon = imageres.dll,-5303
+[b8cdcb65-b1bf-4b42-9428-1dfdb7ee92af]
+ResText = @shell32.dll,-37514
+Text = 全部解压缩(&T)...
+[09799afb-ad67-11d1-abcd-00c04fc30936]
+ResText = @shell32.dll,-5376
+Text = 打开方式(&H)
+Icon = imageres.dll,-5340
+[3dad6c5d-2167-4cae-9914-f99e41c12cfa]
+Text = 包含到库中(&I)
+Icon = imageres.dll,-1001
+[d969a300-e7ff-11d0-a93b-00a0c90f2719]
+ResText = @shell32.dll,-95851
+Text = 新建(&W)
+Icon = imageres.dll,-5307
+[a470f8cf-a1e8-4f65-8335-227475aa5c46]
+Text = 加密(&Y)
+Icon = imageres.dll,-59
 [1d27f844-3a1f-4410-85ac-14651078412d]
-ResText = @*,-2022
+ResText = @acppage.dll,-2022
 Text = 兼容性疑难解答(&Y)
 Icon = msdt.exe
 [7ad84985-87b4-4a16-be58-8b72a5b390f7]
 ResText = @playtomenu.dll,-101
 Text = 播放到设备
 [ffe2a43c-56b9-4bf5-9a79-cc6d4285608a]
-Text = 向左、向右旋转
-[ff609cc7-d34d-4049-a1aa-2293517ffcc6]
-ResText = @stobject.dll,-417
-Text = 设置为桌面背景(&B)
-Icon = imageres.dll,-5346
-[90aa3a4e-1cba-4233-b8bb-535773d48449]
-ResText = @*,-5386
-Text = 固定到任务栏(&K)
-Icon = imageres.dll,-5354
-[09799afb-ad67-11d1-abcd-00c04fc30936]
-ResText = @*,-5376
-Text = 打开方式(&H)
-Icon = imageres.dll,-5340
-[f3d06e7c-1e45-4a26-847e-f9fcdee59be0]
-ResText = @*,-30328
-Text = 复制为路径(&A)
-Icon = imageres.dll,-5302
-[3dad6c5d-2167-4cae-9914-f99e41c12cfa]
-Text = 包含到库中(&I)
-Icon = imageres.dll,-1001
-[470c0ebd-5d73-4d58-9ced-e91e22e23282]
-ResText = @shell32.dll,-51201
-Text = 固定到"开始"屏幕(&P)
-Icon = imageres.dll,-5376
-[a2a9545d-a0c2-42b4-9708-a0b2badd77c8]
-Text = 附到「开始」菜单(&U)
-Icon = imageres.dll,-80
-[7ba4c740-9e81-11cf-99d3-00aa004ae837]
-ResText = @*,-30312
-Text = 发送到(&N)
-Icon = imageres.dll,-185
-[0bf754aa-c967-445c-ab3d-d8fda9bae7ef]
-ResText = @*,-416
-Text = 下一个桌面背景(&N)
-Icon = imageres.dll,-5346
-[d969a300-e7ff-11d0-a93b-00a0c90f2719]
-ResText = @*,-95851
-Text = 新建(&W)
-Icon = imageres.dll,-5307
-[6b9228da-9c15-419e-856c-19e768a13bdc]
-Text = Windows 小工具
-[a470f8cf-a1e8-4f65-8335-227475aa5c46]
-Text = 加密(&Y)
-Icon = imageres.dll,-59
+ResText = @*,-3050
+Text = 向右旋转(&T)​​
 [e2bf9676-5f8f-435c-97eb-11607a5bedf7]
-ResText = @*,-107
+ResText = @ntshrui.dll,-107
 Text = 共享
 Icon = ntshrui.dll,-123
 [e61bf828-5e63-4287-bef1-60b1a4fde0e3]
@@ -104,54 +118,46 @@ ResText = @WorkfoldersControl.dll,-1
 Text = 工作文件夹
 Icon = WorkFolders.exe
 [f81e9010-6ea4-11ce-a7ff-00aa003ca9f6]
-ResText = @*,-103
+ResText = @ntshrui.dll,-103
 Text = 授予访问权限(&G)
 [474c98ee-cf3d-41f5-80e3-4aab0ab04301]
-ResText = @*,-38
+ResText = @cscui.dll,-38
 Text = 始终脱机可用(&F)
 [2854f705-3548-414c-a113-93e27c808c85]
-ResText = @*,-101
+ResText = @EhStorShell.dll,-101
 Text = 增强的存储设备
 [fbeb8a05-beee-4442-804e-409d6c4515e9]
-ResText = @*,-12560
+ResText = @shell32.dll,-12560
 Text = 刻录到光盘(&T)
 Icon = imageres.dll,-30
 [59099400-57ff-11ce-bd94-0020af85b590]
 Text = 复制磁盘(&Y)...
 [d6791a63-e7e2-4fee-bf52-5ded8e86e9b8]
-ResText = @*,-511
+ResText = @wpdshext.dll,-511
 Text = 便携设备菜单
 [0af96ede-aebf-41ed-a1c8-cf7a685505b6]
-Text = 不在导航窗格中显示
+ResText = @shell32.dll,-34618
+Text = 在导航窗格中显示
 Icon = imageres.dll,-5359
 [596ab062-b4d2-4215-9f74-e9109b0a8153]
-ResText = @*,-1037
+ResText = @twext.dll,-1037
 Text = 还原以前的版本(&V)
+[6b9228da-9c15-419e-856c-19e768a13bdc]
+Text = Windows 小工具
 [85bbd920-42a0-1069-a2e4-08002b30309d]
 ResText = @shell32.dll,-22978
 Text = 公文包
 [645ff040-5081-101b-9f08-00aa002f954e]
 Text = 清空回收站(&B)
 Icon = shell32.dll,-254
-[b8cdcb65-b1bf-4b42-9428-1dfdb7ee92af]
-ResText = @shell32.dll,-37514
-Text = 全部解压缩(&T)...
 [bd472f60-27fa-11cf-b8b4-444553540000]
 Text = 提取(&E)...
-[c2fbb630-2971-11d1-a18c-00c04fd75d13]
-ResText = @*,-30304
-Text = 复制到文件夹(&F)...
-Icon = imageres.dll,-5304
-[c2fbb631-2971-11d1-a18c-00c04fd75d13]
-ResText = @*,-30305
-Text = 移动到文件夹(&V)...
-Icon = imageres.dll,-5303
-[3080f90e-d7ad-11d9-bd98-0000947b0257]
-ResText = @shell32.dll,-12715
-Text = 窗口转换程序
-Icon = imageres.dll
 [5635493f-7d77-4372-a839-8ad89f5b3726]
 Text = 卸载(&U)
+[e598560b-28d5-46aa-a14a-8a3bea34b576]
+Text = 幻灯片放映
+[8a734961-c4aa-4741-ac1e-791acebf5b39]
+Text = 联机购买音乐
 
 ;----------------显卡------------------
 [a929c4ce-fd36-4270-b4f5-34ecac5bd63c]
@@ -254,6 +260,8 @@ Text = UltraISO
 Icon = .\UltraISO.exe
 [be86f80b-eb1a-45b4-b4b6-4b12d302b6bc]
 Text = AntZip
+[9d731a0b-89e4-44e2-a6a4-3b05c80d562c]
+Text = i-Zip
 
 ;----------------杀软------------------
 [09a47860-11b0-4da5-afa5-26d86198a780]
@@ -452,16 +460,12 @@ Text = 迅捷PDF转换器
 Icon = .\pdfconverter.exe
 
 ;--------------影音图像----------------
-[8a734961-c4aa-4741-ac1e-791acebf5b39]
-Text = 联机购买音乐
 [f1b9284f-e9dc-4e68-9d7e-42362a59f0fd]
 Text = 添加到“Windows Media Player”列表(&W)
 [ce3fb1d1-02ae-4a5f-a6e9-d9f1b4073e6c]
 Text = 使用“Windows Media Player”播放(&P)
 [7d4734e6-047e-41e2-aeaa-e763b4739dc4]
 Text = 使用 Media Player 播放(&P)
-[e598560b-28d5-46aa-a14a-8a3bea34b576]
-Text = 幻灯片放映
 [9b6d38f3-8ef4-48a5-ad30-ffffffffffff]
 Text = Honeyview
 Icon = .\Honeyview.exe
@@ -496,6 +500,15 @@ Icon = ..\..\Program\APlayer.exe
 [4d2fba8d-621b-4447-af6d-5794f479c4a5]
 Text = 爱奇艺看图
 Icon = ..\QyImg.exe
+[4a34b3e3-f50e-4ff6-8979-7e4176466ff2]
+Text = SageThumbs
+[d149b06b-bc31-4425-b5bb-0e04308982ae]
+Text = 用百图秀打开
+[5add1a3c-29e2-4d18-b79a-c56e1df5486c]
+Text = 百图秀
+[1bb8f8e1-6492-4ec9-ac40-9ad0f5c01fa2]
+Text = 鲨鱼看图
+Icon = .\SharkElevate.exe
 
 ;----------------美化------------------
 [cf444751-60fc-48b8-ac0f-363063eb2a9e]
@@ -528,7 +541,7 @@ Icon = .\QMStart.exe
 Text = 开启布丁桌面
 Icon = .\PDLanuncher.exe
 [b5e436bc-642a-4bf6-b725-26038af26e89]
-Text = 开启猎豹轻桌面
+Text = 开启桌面整理(元气、猎豹轻桌面)
 Icon = .\kdesk.exe
 [5f8d079b-8ce6-4f58-bf10-55c1b68d88f3]
 Text = 选择颜色设置
@@ -636,6 +649,8 @@ Icon = .\microexcel.exe
 [0d8b46ea-7d35-4921-b88c-7e2b1e2d80f0]
 Text = WPS Office
 Icon = ..\..\wpsoffice.exe
+[53506455-e799-443f-addb-891ca6efc928]
+Text = 扫描游戏到快吧游戏
 
 ;-------------UWP新模块----------------
 [776dbc8d-7347-478c-8d71-791e12ef49d8]
