--- a/ContextMenuManager/App.config
+++ b/ContextMenuManager/App.config
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    
-  <supportedRuntime version="v2.0.50727"/></startup>
+    <supportedRuntime version="v2.0.50727"/>
+    <supportedRuntime version="v4.0"/>
+  </startup>
   <runtime>
     <legacyCorruptedStateExceptionsPolicy enabled="true"/>
     <EnableWindowsFormsHighDpiAutoResizing enabled="true"/>
