--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -142,6 +142,7 @@ SingleMenu = 一级
 MultiMenu = 多级
 Public = 公有
 Private = 私有
+SelectAll = 全选
 InputGuid = 输入Guid
 AddGuidDic = 添加Guid本地字典
 DeleteGuidDic = 删除
