--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -547,7 +547,7 @@ Icon = .\kdesk.exe
 Text = 选择颜色设置
 Icon = .\ChromaTune.exe
 [6c125022-639d-43cc-9f3d-647e6cc69ef1]
-Text = 右键菜单背景图片插件(第三方)
+Text = 右键菜单背景插件(ContextBG)
 
 ;--------------文件处理----------------
 [b298d29a-a6ed-11de-ba8c-a68e55d89593]
@@ -651,6 +651,8 @@ Text = WPS Office
 Icon = ..\..\wpsoffice.exe
 [53506455-e799-443f-addb-891ca6efc928]
 Text = 扫描游戏到快吧游戏
+[2a118eb5-5797-4f5e-8b3d-f4ecba3c98e4]
+Text = Adobe Core Sync Extension
 
 ;-------------UWP新模块----------------
 [776dbc8d-7347-478c-8d71-791e12ef49d8]
