--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -108,7 +108,7 @@ ResText = @playtomenu.dll,-101
 Text = 播放到设备
 [ffe2a43c-56b9-4bf5-9a79-cc6d4285608a]
 ResText = @*,-3050
-Text = 向右旋转(&T)​​
+Text = 向右、向左旋转(&T)​​
 [e2bf9676-5f8f-435c-97eb-11607a5bedf7]
 ResText = @ntshrui.dll,-107
 Text = 共享
@@ -175,7 +175,8 @@ Icon = nvcpl.dll
 [9b5f5829-a529-4b12-814a-e81bcb8d93fc]
 Text = 英特尔® 显卡设置
 en-US-Text = Intel® Graphics
-Icon = .\igfxTray.exe
+Icon = .\igfxEM.exe
+;.\igfxTray.exe
 [3ab1675a-ccff-11d2-8b20-00a0c93cb1f4]
 Text = Intel® Graphics
 [5e2121ee-0300-11d4-8d3b-444553540000]
