更新字典和语言文件

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -207,12 +207,14 @@ FileNotExists = 文件不存在！
 FolderNotExists = 文件夹不存在！
 UpdateInfo = 【检测更新】\r\n当前版本：%v1\r\n最新版本：%v2\r\n是否立即下载更新？
 UpdateSucceeded = 程序更新成功！
+DicUpdateSucceeded = 字典和语言文件更新成功!
 VersionIsLatest = 当前版本为最新版！
+WebDataReadFailed = 网络数据读取失败!
+OpenWebUrl = 是否打开相关网页?
 AuthorityProtection = 此菜单注册表项目可能受安全软件保护，\r\n无法对其进行禁用删除和其他个性化修改。
 WinXSorted = 为优化排序功能已对部分项目重新编号，\r\n需要重启文件资源管理器应用效果
 RestoreDefault = 确认还原为默认菜单项目？
 DeleteGroup = 确认永久删除此组及组内所有菜单项目？
-WebDataReadFailed = 网络数据读取失败!
 
 [Tip]
 RestartExplorer = 重启Explorer会使桌面闪烁片刻，正常现象无需担心，\r\n或者你也可以稍后重启或注销计算机使你的操作生效
@@ -261,7 +263,8 @@ CurrentFilePath = 你当前选择的文件对象路径为
 CurrentRegPath = 你当前选择的注册表路径为
 WinXSortable = 启用 WinX 菜单排序功能
 ShowFilePath = 状态栏实时显示文件路径
-OpenMoreRegedit = 允许注册表编辑器多开
+OpenMoreRegedit = 注册表编辑器窗口多开
+OpenMoreExplorer = 文件资源管理器窗口多开
 RestartExplorer = 当前部分操作需要重启文件资源管理器生效
 UserDictionaries = 用户字典
 DictionaryDescription = 字典说明
@@ -289,7 +292,7 @@ HideSysStoreItems = 隐藏公共引用中的系统菜单
 SetPerceivedType = 设置扩展名为 %s 的文件感知类型为
 SetDefaultDropEffect = 设置文件对象默认拖拽命令为
 
-AboutApp = 【兼容性能】\r\n 1.适用于Win7、8、8.1、10、Vista \r\n 2.适用于 64bit、32bit CPU 操作系统\r\n 3.适配高分屏，最佳缩放比为150%\r\n\r\n【代码开源】\r\n 1.代码语言：C Sharp，Winform 程序，MIT 开源协议\r\n 2.Github 仓库：https://github.com/BluePointLilac/ContextMenuManager \r\n 3.Gitee 仓库：https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n【温馨提示】\r\n 1.程序需要对大量的注册表项和文件进行读写删改操作，这些敏感的行为可能\r\n    会被Windows Defender等误报为病毒，如发生此情况请自行添加进白名单。\r\n\r\n 2.一些特殊菜单项可能会受到其他因素影响导致不会直接显示在右键菜单中，\r\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\r\n\r\n 3.每个右键管理程序禁用菜单方法可能不同，建议不要同时使用多个右键菜单管理程序，\r\n    大部分程序使用简单暴力的备份-删除法，此程序尽可能使用了系统提供的键值进行隐藏，\r\n    通过其他程序禁用的菜单项目，请先使用对应程序还原，不然可能无法在此程序中看到它。\r\n\r\n 4.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置，\r\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用\禁用开关。
+AboutApp = 【兼容性能】\r\n 1.适用于Win10、8.1、8、7、Vista \r\n 2.适用于 64bit、32bit CPU 操作系统\r\n 3.适配高分屏，最佳缩放比为150%\r\n\r\n【代码开源】\r\n 1.代码语言：C#，Winform 程序，MIT 开源协议\r\n 2.Github 仓库：https://github.com/BluePointLilac/ContextMenuManager \r\n 3.Gitee 仓库：https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n【温馨提示】\r\n 1.程序需要对大量的注册表项和文件进行读写删改操作，这些敏感的行为可能\r\n    会被Windows Defender等误报为病毒，如发生此情况请自行添加进白名单。\r\n\r\n 2.一些特殊菜单项可能会受到其他因素影响导致不会直接显示在右键菜单中，\r\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\r\n\r\n 3.每个右键管理程序禁用菜单方法可能不同，建议不要同时使用多个右键菜单管理程序，\r\n    大部分程序使用简单暴力的备份-删除法，此程序尽可能使用了系统提供的键值进行隐藏，\r\n    通过其他程序禁用的菜单项目，请先使用对应程序还原，不然可能无法在此程序中看到它。\r\n\r\n 4.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置，\r\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用\禁用开关。
 
 Dictionaries = 【字典说明】\r\n 此程序拥有几个字典文件，每份字典又有用户字典(User目录)和网络字典(Web目录)\r\n 如果想为此程序添加字典可右键保存文件至User目录，并按照文件内说明进行添加\r\n 你可以将你的字典发送到我的邮箱或者提交合并到Github为此项目做出你的贡献\n 右侧选项卡中为原始字典内容，你可以切换选项卡进行查看和右键编辑、保存操作\r\n\r\n【字典内容】\r\n 1.程序显示文本语言字典 (Languages目录)\r\n 2.ShellEx菜单项GUID文本图标字典 (GuidInfosDic.ini)\r\n 3.第三方程序菜单内部设置字典 (ThirdRulesDic.xml)\r\n 4.增强菜单项目字典 (EnhanceMenusDic.xml)\r\n 5.UWP新模块字典 (UWPModeItemsDic.xml)
 
